--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "autoprefixer": "^10.2.5",
     "vant": "^3.0.12",
+    "vconsole": "^3.4.1",
     "vue": "^3.0.5",
     "vue-router": "^4.0.6",
     "vuex": "^4.0.0"
@@ -23,6 +24,7 @@
     "axios": "^0.21.1",
     "postcss-load-config": "^3.0.1",
     "postcss-px-to-viewport": "^1.1.1",
+    "sass": "^1.32.8",
     "typescript": "^4.1.3",
     "vite": "^2.1.5",
     "vite-plugin-imp": "^2.0.5",
